# Cadastro_Circ

./: .ENV  .dockerignore  .gitignore  Dockerfile  circuitos_circuitos.sql  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  tretas.txt  upgrade_cadserv.sh
Diversos/: Circ_FOE.csv  Circ_FOE.sql  Circuitos (5).csv  Circuitos (5)r.txt  Circuitos.csv  Circuitos_13_03_2025.csv  DICOFRE.xlsx  Hist_Cct.csv  Hist_FOE.csv  LOIPT_01.csv  LOIPT_01.xlsx  SAPs_01.xlsx  circuitos_circuitos.csv  copiacircuitos (1).csv  copiacircuitos.csv  copiacircuitos.sql  foe_circfoe.sql  teste.py  teste_funções.py  tretas.txt  ver_circuito.html
cadastro/: asgi.py  settings.py  urls.py  wsgi.py
cartas/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
cartas/migrations/: 0001_initial.py  0002_alter_cartas_descricao_alter_cartas_equipamento_and_more.py  0003_alter_cartas_data_rececao_alter_cartas_fabricante.py
circuitos/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
circuitos/migrations/: 0001_initial.py  0002_alter_circuitos_user_cct.py  (+9 more)
cmain/: apps.py  decorators.py  forms.py  models.py  urls.py  validators.py  views.py
dados/: admin.py  forms.py  models.py  urls.py  views.py
foe/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
ligafo/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
sdados/: apps.py  forms.py  models.py  urls.py  views.py
static/: datatables.min.css  input.css  iptelecom - Cópia.css  iptelecom.css  teste
static/css/: input.css  (+1 more)
templates/: base.html  navbar.html
(+99 files in other folders)
