[project]
name = "cadastro-circ"
version = "0.2.0"
description = "Cadasstro de Circuitos, Fibra Otica Escura e ligações óticas"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crispy-tailwind>=1.0.3",
    "django>=5.1.6",
    "django-addanother>=2.2.2",
    "django-crispy-forms>=2.3",
    "django-extensions>=3.2.3",
    "django-extra-views>=0.15.0",
    "django-filter>=25.1",
    "django-htmx>=1.26.0",
    "django-import-export>=4.3.6",
    "django-render-block>=0.10",
    "django-simple-history>=3.8.0",
    "fontawesomefree>=6.6.0",
    "gunicorn>=23.0.0",
    "mysqlclient>=2.2.7",
    "python-decouple>=3.8",
    "whitenoise>=6.9.0",
]

[dependency-groups]
dev = [
    "django-model-info>=2024.11.5",
]
